tests/overloadedrecflds/should_compile/T22106_aux.hs
{-# LANGUAGE NoFieldSelectors #-}

module T22106_aux where

data T = MkT { foo :: Int, bar :: Int }
foo = ()
